--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Frist Typescript Project</title>
+    <title>Typescript</title>
 </head>
-<body>  
-    <h1>Hello World </h1>
+<body>
+    <h1>This is My Typescript Project</h1>
 
-    <script src="./dist/app.js"></script>
+    <script src="./output/script.js"></script>
 </body>
 </html>
