--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>This is My Typescript Project</h1>
 
-    <script src="./output/script.js"></script>
+    <script type="module" src="./output/script.js"></script>
 </body>
 </html>
